fix css styling for font and menu collapsed button

--- a/src/ui-core/sass/components/MenuWrapper.scss
+++ b/src/ui-core/sass/components/MenuWrapper.scss
@@ -1,4 +1,4 @@
-.start-new-game-menu {	
+.start-new-game {	
 	text-align: center;
 	display: flex;
 	flex-direction: column;
@@ -8,12 +8,6 @@
 	padding: 10px;
 	color: green;
 	border: 1px solid green;
-	
-	.start-new-game {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-	}
 	
 	.chevron {
 		padding-left: 5px;
